--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "com.savvasdalkitsis.gameframe"
         minSdkVersion 14
@@ -19,8 +24,18 @@ android {
     }
 }
 
+retrolambda {
+    jvmArgs '-noverify'
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile (
+            'com.android.support:appcompat-v7:24.0.0',
+            'com.shazam.android:aspects:1.0.0',
+            'com.savvasdalkitsis:butterknife-aspects:1.0.0',
+            'com.jakewharton:butterknife:8.4.0',
+    )
+    provided 'org.projectlombok:lombok:1.12.6'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.0.0'
 }
