--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -12,7 +12,7 @@ android {
     defaultConfig {
         applicationId "com.savvasdalkitsis.gameframe"
         minSdkVersion 14
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -24,6 +24,10 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+}
+
 retrolambda {
     jvmArgs '-noverify'
 }
@@ -31,10 +35,17 @@ retrolambda {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile (
-            'com.android.support:appcompat-v7:24.0.0',
+            'com.android.support:appcompat-v7:25.0.0',
+            'com.android.support:design:25.0.0',
             'com.shazam.android:aspects:1.0.0',
             'com.savvasdalkitsis:butterknife-aspects:1.0.0',
             'com.jakewharton:butterknife:6.1.0',
+            'com.squareup.retrofit2:retrofit:2.1.0',
+            'io.reactivex:rxandroid:1.2.1',
+            'io.reactivex:rxjava:1.2.3',
+            'com.squareup.retrofit2:adapter-rxjava:2.1.0',
+            'com.squareup.okhttp3:logging-interceptor:3.4.2',
+            'com.github.andrewlord1990:snackbarbuilder:0.7.0',
     )
     provided 'org.projectlombok:lombok:1.12.6'
     testCompile 'junit:junit:4.12'
