--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile (
             'com.android.support:appcompat-v7:25.0.0',
             'com.android.support:design:25.0.0',
+            'com.android.support:cardview-v7:25.0.0',
             'com.shazam.android:aspects:1.0.0',
             'com.savvasdalkitsis:butterknife-aspects:1.0.0',
             'com.jakewharton:butterknife:6.1.0',
