--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     }
     defaultConfig {
         applicationId "com.savvasdalkitsis.gameframe"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -52,6 +52,7 @@ dependencies {
             'com.github.andrewlord1990:snackbarbuilder:0.7.0',
             'uk.co.chrisjenx:calligraphy:2.2.0',
             'com.android.support.constraint:constraint-layout:1.0.0-beta4',
+            'com.dmitrymalkovich.android:progress-fab:1.6',
     )
     provided 'org.projectlombok:lombok:1.12.6'
     testCompile 'junit:junit:4.12'
