--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,16 @@
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize"/>
 
+        <service
+            android:name=".control.view.PowerTileService"
+            android:label="@string/game_frame_power"
+            android:icon="@drawable/ic_block_power"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
