--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,36 @@
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
+        
+        <receiver
+            android:name=".control.view.PowerWidgetProvider"
+            android:label="@string/power">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/power_appwidget_info" />
+        </receiver>
+
+        <receiver
+            android:name=".control.view.NextWidgetProvider"
+            android:label="@string/next">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/next_appwidget_info" />
+        </receiver>
+
+        <receiver
+            android:name=".control.view.MenuWidgetProvider"
+            android:label="@string/menu">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/menu_appwidget_info" />
+        </receiver>
 
     </application>
 
