--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
             'com.github.andrewlord1990:snackbarbuilder:0.7.0',
             'uk.co.chrisjenx:calligraphy:2.2.0',
             'com.android.support.constraint:constraint-layout:1.0.0-beta4',
+            'com.afollestad.material-dialogs:core:0.9.1.0',
     )
     provided 'org.projectlombok:lombok:1.12.6'
     testCompile 'junit:junit:4.12'
