--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
             'com.afollestad.material-dialogs:core:0.9.1.0',
             'com.afollestad.material-dialogs:commons:0.9.1.0',
             'commons-io:commons-io:2.5',
+            'com.sothree.slidinguppanel:library:3.3.1',
     )
     provided 'org.projectlombok:lombok:1.12.6'
     testCompile 'junit:junit:4.12'
