--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,21 +26,24 @@ android {
 
 repositories {
     jcenter()
+    maven {
+        url "https://maven.google.com"
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile (
-            'com.android.support:appcompat-v7:25.0.0',
-            'com.android.support:design:25.0.0',
-            'com.android.support:cardview-v7:25.0.0',
-            'com.android.support:gridlayout-v7:25.0.0',
-            'com.jakewharton:butterknife:8.8.1',
-            'com.squareup.retrofit2:retrofit:2.1.0',
-            'io.reactivex:rxandroid:1.2.1',
-            'io.reactivex:rxjava:1.2.3',
-            'com.squareup.retrofit2:adapter-rxjava:2.1.0',
-            'com.squareup.retrofit2:converter-gson:2.1.0',
+            "com.android.support:appcompat-v7:$support_version",
+            "com.android.support:design:$support_version",
+            "com.android.support:cardview-v7:$support_version",
+            "com.android.support:gridlayout-v7:$support_version",
+            "com.jakewharton:butterknife:$butterknife_version",
+            "com.squareup.retrofit2:retrofit:$retrofit_version",
+            "io.reactivex.rxjava2:rxandroid:$rxandroid_version",
+            "io.reactivex.rxjava2:rxjava:$rxjava_version",
+            "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version",
+            "com.squareup.retrofit2:converter-gson:$retrofit_version",
             'com.squareup.okhttp3:logging-interceptor:3.4.2',
             'com.github.andrewlord1990:snackbarbuilder:0.7.0',
             'uk.co.chrisjenx:calligraphy:2.2.0',
@@ -52,5 +55,5 @@ dependencies {
             "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
     )
     testCompile 'junit:junit:4.12'
-    kapt "com.jakewharton:butterknife-compiler:8.8.1"
+    kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
 }
