--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.4'
+    ext{
+        kotlin_version = '1.1.4'
+        support_version = '26.0.0'
+        retrofit_version = '2.3.0'
+        rxjava_version = '2.1.3'
+        rxandroid_version = '2.0.1'
+        butterknife_version = '8.8.1'
+    }
     repositories {
         jcenter()
     }
