--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
             'commons-io:commons-io:2.5',
             'com.sothree.slidinguppanel:library:3.3.1',
             "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
+            "io.github.yavski:fab-speed-dial:1.0.7",
     )
     testCompile 'junit:junit:4.12'
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
