--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     ext{
-        kotlin_version = '1.1.4'
-        support_version = '26.0.0'
+        kotlin_version = '1.1.4-2'
+        support_version = '26.0.2'
         retrofit_version = '2.3.0'
         rxjava_version = '2.1.3'
         rxandroid_version = '2.0.1'
