--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext{
-        kotlin_version = '1.1.4-2'
+        kotlin_version = '1.1.50'
         support_version = '26.0.2'
         retrofit_version = '2.3.0'
         rxjava_version = '2.1.3'
