--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
             'com.afollestad.material-dialogs:core:0.9.1.0',
             'com.afollestad.material-dialogs:commons:0.9.1.0',
             'commons-io:commons-io:2.5',
-            'com.sothree.slidinguppanel:library:3.3.1',
+            'com.sothree.slidinguppanel:library:3.4.0',
             "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
             "io.github.yavski:fab-speed-dial:1.0.7",
     )
@@ -77,7 +77,7 @@ gradle.taskGraph.whenReady { taskGraph ->
 }
 
 private static String readPass(String type) {
-    def pass = ''
+    def pass
     if (System.console() == null) {
         throw new InvalidUserDataException("Need console to enter password.")
     } else {
