--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
             'com.sothree.slidinguppanel:library:3.4.0',
             "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
             "io.github.yavski:fab-speed-dial:1.0.7",
+            "com.androidadvance:topsnackbar:1.1.1",
     )
     testCompile 'junit:junit:4.12'
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
