--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,15 @@
             android:name="io.fabric.ApiKey"
             android:value="${fabric_api_key}" />
 
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.savvasdalkitsis.gameframe.fileProvider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
