--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,22 @@
 buildscript {
     ext{
         kotlin_version = '1.1.51'
-        support_version = '26.0.2'
+        support_version = '27.0.0'
         retrofit_version = '2.3.0'
-        rxjava_version = '2.1.3'
+        rxjava_version = '2.1.5'
         rxandroid_version = '2.0.1'
         butterknife_version = '8.8.1'
+        okhttp_version = '3.9.0'
+        snackbarbuilder_version = '0.9.0'
+        calligraphy_version = '2.3.0'
+        material_dialogs_version = '0.9.5.0'
+        commons_io_version = '2.6'
+        slidinguppanel_version = '3.4.0'
+        fab_speed_dial_version = '1.0.7'
+        topsnackbar_version = '1.1.1'
+        markdownview_version = '1.1.0'
+        crashlytics_version = '2.7.1'
+        answers_version = '1.4.1'
     }
     repositories {
         jcenter()
@@ -15,7 +26,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-rc1'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         //noinspection GradleDynamicVersion
         classpath 'io.fabric.tools:gradle:1.+'
