--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.savvasdalkitsis.gameframe"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 5
-        versionName "1.2"
+        versionCode app_version_code
+        versionName app_version
         manifestPlaceholders = [fabric_api_key: FABRIC_API_KEY]
     }
     buildTypes {
@@ -42,12 +42,14 @@ repositories {
 }
 
 dependencies {
+    wearApp project(':watch')
     implementation (
             "com.google.firebase:firebase-crash:$firebase_version",
             "com.android.support:appcompat-v7:$support_version",
             "com.android.support:design:$support_version",
             "com.android.support:cardview-v7:$support_version",
             "com.android.support:gridlayout-v7:$support_version",
+            "com.google.android.gms:play-services-wearable:11.4.2",
             "com.jakewharton:butterknife:$butterknife_version",
             "com.squareup.retrofit2:retrofit:$retrofit_version",
             "io.reactivex.rxjava2:rxandroid:$rxandroid_version",
