--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext{
+        app_version = '1.2'
+        app_version_code = 5
         kotlin_version = '1.1.51'
         support_version = '27.0.0'
         retrofit_version = '2.3.0'
@@ -19,6 +21,7 @@ buildscript {
         markdownview_version = '1.1.0'
         firebase_version = '11.4.2'
         maoni_version = '4.0.1'
+        wear_version = '2.1.0'
     }
     repositories {
         jcenter()
