--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 26
@@ -26,9 +25,6 @@ android {
         manifestPlaceholders = [fabric_api_key: FABRIC_API_KEY]
     }
     buildTypes {
-        debug {
-            ext.enableCrashlytics = false
-        }
         release {
             minifyEnabled false
             shrinkResources false
@@ -42,12 +38,11 @@ android {
 repositories {
     jcenter()
     maven { url "https://maven.google.com" }
-    maven { url 'https://maven.fabric.io/public' }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile (
+    implementation (
+            "com.google.firebase:firebase-crash:$firebase_version",
             "com.android.support:appcompat-v7:$support_version",
             "com.android.support:design:$support_version",
             "com.android.support:cardview-v7:$support_version",
@@ -70,18 +65,11 @@ dependencies {
             "com.androidadvance:topsnackbar:$topsnackbar_version",
             "us.feras.mdv:markdownview:$markdownview_version",
     )
-    compile("com.crashlytics.sdk.android:crashlytics:$crashlytics_version@aar") {
-        transitive = true
-    }
-    compile("com.crashlytics.sdk.android:answers:$answers_version@aar") {
-        transitive = true
-    }
-    testCompile 'junit:junit:4.12'
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
 }
 
 gradle.taskGraph.whenReady { taskGraph ->
-    if(taskGraph.hasTask(':app:assembleRelease')) {
+    if (taskGraph.hasTask(':app:assembleRelease')) {
         android.signingConfigs.release.storePassword = readPass("store")
         android.signingConfigs.release.keyPassword = readPass("key")
     }
@@ -101,3 +89,5 @@ private static String readPass(String type) {
     }
     pass
 }
+
+apply plugin: 'com.google.gms.google-services'
