--- a/build.gradle
+++ b/build.gradle
@@ -17,22 +17,19 @@ buildscript {
         fab_speed_dial_version = '1.0.7'
         topsnackbar_version = '1.1.1'
         markdownview_version = '1.1.0'
-        crashlytics_version = '2.7.1'
-        answers_version = '1.4.1'
+        firebase_version = '11.0.4'
     }
     repositories {
         jcenter()
         google()
-        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        //noinspection GradleDynamicVersion
-        classpath 'io.fabric.tools:gradle:1.+'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:3.1.2'
     }
 }
 
