--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
@@ -65,6 +66,7 @@ dependencies {
             "com.androidadvance:topsnackbar:$topsnackbar_version",
             "us.feras.mdv:markdownview:$markdownview_version",
     )
+    compile "com.google.firebase:firebase-perf:$firebase_version"
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
 }
 
