--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -4,5 +4,6 @@
     <application>
         <meta-data android:name="firebase_crash_collection_enabled" android:value="false" />
         <meta-data android:name="firebase_analytics_collection_deactivated" android:value="true" />
+        <meta-data android:name="firebase_performance_collection_deactivated" android:value="true" />
     </application>
 </manifest>
