Add feedback functionality (fixes #23)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
             "us.feras.mdv:markdownview:$markdownview_version",
     )
     compile "com.google.firebase:firebase-perf:$firebase_version"
+    compile ("org.rm3l:maoni:$maoni_version@aar") {
+        transitive = true
+    }
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
 }
 
