--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
         topsnackbar_version = '1.1.1'
         markdownview_version = '1.1.0'
         firebase_version = '11.4.2'
+        maoni_version = '4.0.1'
     }
     repositories {
         jcenter()
