--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,12 +44,12 @@ repositories {
 dependencies {
     wearApp project(':watch')
     implementation (
-            "com.google.firebase:firebase-crash:$firebase_version",
+            "com.google.firebase:firebase-crash:$gms_version",
             "com.android.support:appcompat-v7:$support_version",
             "com.android.support:design:$support_version",
             "com.android.support:cardview-v7:$support_version",
             "com.android.support:gridlayout-v7:$support_version",
-            "com.google.android.gms:play-services-wearable:11.4.2",
+            "com.google.android.gms:play-services-wearable:$gms_version",
             "com.jakewharton:butterknife:$butterknife_version",
             "com.squareup.retrofit2:retrofit:$retrofit_version",
             "io.reactivex.rxjava2:rxandroid:$rxandroid_version",
@@ -68,7 +68,7 @@ dependencies {
             "com.androidadvance:topsnackbar:$topsnackbar_version",
             "us.feras.mdv:markdownview:$markdownview_version",
     )
-    compile "com.google.firebase:firebase-perf:$firebase_version"
+    compile "com.google.firebase:firebase-perf:$gms_version"
     compile ("org.rm3l:maoni:$maoni_version@aar") {
         transitive = true
     }
