--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
         fab_speed_dial_version = '1.0.7'
         topsnackbar_version = '1.1.1'
         markdownview_version = '1.1.0'
-        firebase_version = '11.4.2'
+        gms_version = '11.6.0'
         maoni_version = '4.0.1'
         wear_version = '2.1.0'
     }
