--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext{
         app_version = '1.2'
         app_version_code = 5
-        kotlin_version = '1.1.51'
+        kotlin_version = '1.2.10'
         support_version = '27.0.0'
         retrofit_version = '2.3.0'
         rxjava_version = '2.1.5'
@@ -19,16 +19,22 @@ buildscript {
         fab_speed_dial_version = '1.0.7'
         topsnackbar_version = '1.1.1'
         markdownview_version = '1.1.0'
-        gms_version = '11.6.0'
+        gms_version = '11.6.2'
+        firebase_version = '11.6.2'
         maoni_version = '4.0.1'
         wear_version = '2.1.0'
+        google_services_version = '3.1.0'
+        fresco_version = '1.5.0'
+        multidex_version = '1.0.1'
+        constraint_layout_version = '1.0.2'
+        rx_binding_version = '2.0.0'
     }
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
