--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':watch', ':infra', ':message', ':kotlin', ':storage', ':networking', ':history', ':changelog', ':styles', ':bitmap'
+include ':app', ':watch', ':infra', ':message', ':kotlin', ':storage', ':networking', ':history', ':changelog', ':styles', ':bitmap', ':composition'
