--- a/device/build.gradle
+++ b/device/build.gradle
@@ -24,14 +24,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation project(":kotlin")
-    implementation project(':infra')
+    implementation project(":infra")
+    implementation project(":networking")
+    implementation project(":bitmap")
+    implementation project(":ip")
+    implementation project(":storage")
     implementation(
             "io.reactivex.rxjava2:rxjava:$rxjava_version",
-            "com.squareup.okhttp3:logging-interceptor:$okhttp_version",
-    )
-    api(
-            "com.squareup.okhttp3:okhttp:$okhttp_version",
-            "com.squareup.retrofit2:retrofit:$retrofit_version"
     )
 }
