--- a/control/build.gradle
+++ b/control/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion compile_sdk_version
@@ -26,12 +27,11 @@ dependencies {
 
     implementation project(":infra")
     implementation project(":networking")
-    implementation project(":bitmap")
     implementation project(":ip")
-    implementation project(":storage")
+    implementation project(":device")
+    implementation project(":message")
     implementation(
             "io.reactivex.rxjava2:rxjava:$rxjava_version",
-            "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version",
-            "com.squareup.retrofit2:converter-gson:$retrofit_version",
+            "com.android.support:design:$support_version",
     )
 }
