--- a/widget/src/main/AndroidManifest.xml
+++ b/widget/src/main/AndroidManifest.xml
@@ -1,1 +1,50 @@
-<manifest package="com.savvasdalkitsis.gameframe.feature.widget" />
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.savvasdalkitsis.gameframe.feature.widget">
+    <application>
+
+        <service
+            android:name=".view.PowerTileService"
+            android:icon="@drawable/ic_block_power"
+            android:label="@string/game_frame_power"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
+
+        <receiver
+            android:name=".view.PowerWidgetProvider"
+            android:label="@string/power">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/power_appwidget_info" />
+        </receiver>
+        <receiver
+            android:name=".view.NextWidgetProvider"
+            android:label="@string/next">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/next_appwidget_info" />
+        </receiver>
+        <receiver
+            android:name=".view.MenuWidgetProvider"
+            android:label="@string/menu">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/menu_appwidget_info" />
+        </receiver>
+    </application>
+</manifest>
