--- a/build.gradle
+++ b/build.gradle
@@ -60,3 +60,7 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+subprojects {
+    task allDeps(type: DependencyReportTask) {}
+}
