--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,12 +63,10 @@ dependencies {
     implementation project(':control')
     implementation project(':widget')
     implementation project(':wear')
+    implementation project(':authentication')
     implementation (
-            "com.google.firebase:firebase-crash:$gms_version",
-            "com.google.firebase:firebase-auth:$firebase_version",
             "com.google.android.gms:play-services-auth:$firebase_version",
             "com.google.gms:google-services:$google_services_version",
-            "com.firebaseui:firebase-ui-auth:3.1.0",
             "com.android.support:appcompat-v7:$support_version",
             "com.android.support:design:$support_version",
             "com.android.support:cardview-v7:$support_version",
@@ -83,11 +81,13 @@ dependencies {
             "com.android.support:multidex:$multidex_version",
             "com.facebook.fresco:fresco:$fresco_version",
             "com.android.support.constraint:constraint-layout:$constraint_layout_version",
+            "com.google.firebase:firebase-crash:$gms_version",
             "com.jakewharton.rxbinding2:rxbinding-kotlin:$rx_binding_version",
             "com.google.firebase:firebase-firestore:$firebase_version"
     )
     implementation ("com.facebook.android:facebook-android-sdk:4.27.0") {
         exclude group: 'com.facebook.fresco', module: 'drawee'
+        exclude group: 'com.android.support', module: 'customtabs'
     }
     implementation("com.twitter.sdk.android:twitter-core:3.0.0@aar") { transitive = true }
     compile "com.google.firebase:firebase-perf:$gms_version"
