--- a/infra/build.gradle
+++ b/infra/build.gradle
@@ -35,6 +35,7 @@ dependencies {
             "io.github.yavski:fab-speed-dial:$fab_speed_dial_version",
     )
     implementation ("org.rm3l:maoni:$maoni_version@aar") { transitive = true }
+    implementation ("org.rm3l:maoni-email:3.1.0-maoni_6.0.0")
     api(
             "io.reactivex.rxjava2:rxandroid:$rxandroid_version",
             "io.reactivex.rxjava2:rxjava:$rxjava_version",
