--- a/kotlin/build.gradle
+++ b/kotlin/build.gradle
@@ -25,6 +25,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     api(
-            "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+            "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     )
 }
