--- a/watch/build.gradle
+++ b/watch/build.gradle
@@ -23,7 +23,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(
-            "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
+            "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
             "com.google.android.support:wearable:$wear_version",
             "com.google.android.gms:play-services-wearable:11.4.2",
             "com.android.support:percent:$support_version",
