--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ FACEBOOK_APPLICATION_ID=
 FACEBOOK_LOGIN_PROTOCOL_SCHEME=
 TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
+org.gradle.configureondemand=false
