Upselling account when saving a project for one time only (also moving all navigation to infra again to fix cyclic dependency problem we'd have otherwise needing to go to account from workspace)

--- a/account/src/main/AndroidManifest.xml
+++ b/account/src/main/AndroidManifest.xml
@@ -5,6 +5,14 @@
 
         <activity
             android:label="@string/account"
-            android:name=".view.AccountActivity" />
+            android:name=".view.AccountActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.VIEW"/>
+                <data android:scheme="gameframe"
+                    android:host="navigation"
+                    android:pathPattern="/account"/>
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
