--- a/ip/build.gradle
+++ b/ip/build.gradle
@@ -24,6 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':analytics')
 
     api project(":networking")
     implementation project(":message")
