--- a/account/build.gradle
+++ b/account/build.gradle
@@ -26,6 +26,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':analytics')
 
     implementation project(":authentication")
     implementation project(":workspace")
