--- a/networking/build.gradle
+++ b/networking/build.gradle
@@ -23,6 +23,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':analytics')
 
     api project(':infra')
     implementation(
