--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation project(":ip")
     implementation project(":device")
     implementation project(":message")
+    implementation project(":navigation")
+    implementation project(":analytics")
     implementation(
             "io.reactivex.rxjava2:rxjava:$rxjava_version",
             "com.android.support:support-annotations:$support_version",
