--- a/workspace/src/main/AndroidManifest.xml
+++ b/workspace/src/main/AndroidManifest.xml
@@ -1,16 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.savvasdalkitsis.gameframe.feature.workspace">
-    <application>
-
-        <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.savvasdalkitsis.gameframe.fileProvider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths" />
-        </provider>
-    </application>
-</manifest>
+<manifest package="com.savvasdalkitsis.gameframe.feature.workspace" />
