Fix #26. Prohibiting clear text connections on api 26 and above.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:name=".GameFrameApplication"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/security_config"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
     </application>
 
