Adding module graph gradle plugin

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ buildscript {
         maven {
             url 'https://maven.fabric.io/public'
         }
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
@@ -50,8 +51,11 @@ buildscript {
         classpath 'com.google.gms:google-services:3.1.2'
         classpath 'com.google.firebase:firebase-plugins:1.1.2'
         classpath 'io.fabric.tools:gradle:1.25.4'
+        classpath "com.savvasdalkitsis:module-dependency-graph:0.3"
     }
 }
+
+apply plugin: "com.savvasdalkitsis.module-dependency-graph"
 
 allprojects {
     repositories {
